⚙️[Fix] Correct issues with exponential average loss + other minor changes